crates/core/tests/snapshots/un_export_rename_alias_rule__alias_used_beyond_export_is_also_renamed.snap
---
source: crates/core/tests/un_export_rename_alias_rule.rs
expression: output
---
export class BrowserRouter {
    render() {
        return 42;
    }
}
console.log(BrowserRouter);
