crates/core/tests/snapshots/un_export_rename_alias_rule__export_named_multiple_classes.snap
---
source: crates/core/tests/un_export_rename_alias_rule.rs
expression: output
---
export class Foo {
    render() {
        return 1;
    }
}
Foo.propTypes = {};
export class Bar {
    render() {
        return 2;
    }
}
Bar.propTypes = {};
