crates/core/tests/snapshots/un_export_rename_alias_rule__export_named_renames_through_alias.snap
---
source: crates/core/tests/un_export_rename_alias_rule.rs
expression: output
---
export class BrowserRouter {
    render() {
        return 42;
    }
}
